--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,6 @@ out/
 .vscode/
 
 ### application properties ###
-.application.properties
-.db.properties
+src/main/.DS_Store
+src/**/db.properties
+src/**/application.properties
