--- a/build.gradle
+++ b/build.gradle
@@ -14,34 +14,30 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
+//    implementation 'org.springframework.boot:spring-security-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.9'
+    implementation 'mysql:mysql-connector-java'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+//    implementation 'org.springframework.security:spring-security-oauth2-core'
+//    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.1.BUILD-SNAPSHOT'
+//    redis
+//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//    implementation 'org.apache.commons:commons-lang3:3.9'
+//    implementation 'io.springfox:springfox-swagger2:2.9.2'
+//    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+//    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.228')
+//    implementation 'com.amazonaws:aws-java-sdk-s3'
+//    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    implementation 'org.apache.commons:commons-lang3:3.9'
-
-    implementation 'io.springfox:springfox-swagger2:2.9.2'
-    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-
-    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.228')
-    implementation 'com.amazonaws:aws-java-sdk-s3'
-
-    // redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
-    implementation("org.mariadb.jdbc:mariadb-java-client:2.1.2")
+//    implementation("org.mariadb.jdbc:mariadb-java-client:2.1.2")
+//    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'implementation("org.mariadb.jdbc:mariadb-java-client:2.1.2")
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-    
-    
     testCompile('com.h2database:h2')
-
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
